monitoring/base/grafana/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-dashboard
  namespace: istio-system
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
