monitoring/base/grafana/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - grafana.local
  gateways:
  - istio-ingress/http-ingress-gateway
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        subset: ""
        port:
          number: 3000
